<resources>
    <string name="app_name">Tiến Lên App</string>
    <string name="no_internet">No network, please try again later</string>
    <string name="content_error">Content path error, please try again later</string>
    <string name="double_tab">Please click Back again to exit</string>
    <string name="date_format">https://xskt.com.vn/%s/%s</string>
    <string name="rate">Đánh giá 5 sao</string>
    <string name="share">Chia sẻ App</string>
    <string name="xo_so">Xổ số</string>
    <string name="title">Title</string>
    <string name="register">Đăng ký</string>
    <string name="login">Đăng nhập</string>
    <string name="gift">Khuyến Mãi</string>
    <string name="cskh">Liên hệ CSKH</string>
    <string name="about">Giới thiệu</string>
    <string name="code">Mã Khách Hàng</string>
    <string name="enter_name">Nhập họ tên</string>
    <string name="enter_phone">Nhập số điện thoại</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="content">
    Tiến Lên App - là ứng dụng giải trí Tiến Lên Miền Nam là một trong các game thuộc Cổng game giải trí.
\n
\n
    Người chơi có thể chơi trực tiếp trên Web và cả chơi trên di động hoàn toàn miễn phí.
\n
\n
	Đánh bài Tiến Lên là dùng 52 Lá bài chia đều cho 4 người, đây là trò chơi đơn giản mà hấp dẫn tương tự như các game bai khác cùng thể loại: Tú Lơ Khơ, Tá Lả, Phỏm, Mậu Binh, Binh Xập Xám, Sâm Lốc, Cờ tướng, hiện đang thu hút rất nhiều người yêu thích game bài tại Việt Nam tham gia.
\n
\n
    - Giao diện đẹp, hiệu ứng, âm thanh sinh động, chơi cực mượt.
\n
\n
    - Lối chơi truyền thống, trải nghiệm cực đỉnh.
\n
\n
    - Trò chơi không ủng hộ "việc cá cược/giao dịch bằng tiền thật" hoặc cũng không hỗ trợ các giải thưởng bằng tiền mặt.
\n
\n
	- Kinh nghiệm đã chơi hoặc chơi thắng ở trò chơi game bài trên mạng xã hội không đồng nghĩa với sẽ thắng trong các hoạt động cá cược/giao dịch bằng tiền thật sau này.
\n
\n
    Chăm sóc khách hàng chuyên nghiệp, đội ngủ hỗ trợ, admin, support túc trực 24/7.
\n
\n
   Ứng dụng được thiết kế với giao diện sống động và được tối ưu hóa kết nối 3G/4G hay wifi.
\n
\n
    Trải nghiệm nhiều điểm nổi bật nhất từ ứng dụng của chúng tôi ngay hôm nay!</string>
    <string name="copy_success">Sao chép thành công</string>
    <string name="empty_name">Họ tên không được để trống</string>
    <string name="empty_phone">Số điện thoại không được để trống</string>
    <string name="wrong_phone">Số Điện thoại không hợp lệ</string>
</resources>