<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_background"
    tools:context=".activity.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_50dp"
            android:background="@color/transparent"
            app:navigationIcon="@drawable/ic_menu"
            app:theme="@style/textNormalBold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dimen_70dp"
            android:paddingRight="@dimen/dimen_70dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_160dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logo_app" />

            <Button
                android:id="@+id/btnRegister"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/dimen_30dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

            <Button
                android:id="@+id/btnLogin"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

            <Button
                android:id="@+id/btnGift"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:text="@string/gift"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />

            <Button
                android:id="@+id/btnCSKH"
                style="@style/textNormalBold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_60dp"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:background="@drawable/bg_main_btn"
                android:gravity="center"
                android:text="@string/cskh"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_18sp" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/textNormalWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/margin_5dp"
            android:text="Ver 2.5.1"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_12sp" />
    </RelativeLayout>

    <include layout="@layout/layout_navigation" />
</androidx.drawerlayout.widget.DrawerLayout>